Hot fix, breadcrum archivos

--- a/templates/archivos/carpetas.html.twig
+++ b/templates/archivos/carpetas.html.twig
@@ -14,7 +14,7 @@
                   <i class="material-icons">home</i> Home</a>
               </li>
               <li class="breadcrumb-item bcrumb-2">
-                <a href="{{'archivos'}}">Archivos</a>
+                <a href="{{ path('archivos', {id:cliente.id}) }}">Archivos</a>
               </li>
               <li class="breadcrumb-item bcrumb-2">
                 <a href="javascript:void(0);">{{cliente.razonSocial}}</a>
