Hot Fix, visualización de archivos

--- a/templates/clientes/nomina.html.twig
+++ b/templates/clientes/nomina.html.twig
@@ -561,7 +561,7 @@
       });
 
       $(".upload-file").change(function(e){
-          e.preventDefault()
+          e.preventDefault();
           var tipo = $(this).val();
           var padre=$(this).data('padre');
           var day=$(this).data('day');
