--- a/templates/clientes/pagos.html.twig
+++ b/templates/clientes/pagos.html.twig
@@ -279,7 +279,7 @@
 
 
                               {% else %}
-                                 <a href="{{path('pagos_cliente_revisado',{id:pago.id})}}" class="col-dark-green text-green  waves-effect m-r-20 revisado" title="Quitar Revisado" >  <i class="material-icons">done</i></a>
+                                 <a href="{{path('pagos_cliente_revisado',{id:pago.id})}}" class="{{ pago.revisado == 0?'col-dark-gray':'col-dark-green' }} text-green  waves-effect m-r-20 revisado" title="Quitar Revisado" >  <i class="material-icons">done</i></a>
                           
                               {% endif %}
 
